--- a/app/assets/stylesheets/message/_message.scss
+++ b/app/assets/stylesheets/message/_message.scss
@@ -24,16 +24,16 @@
         }
       }
     }
-    a{
-      color: #38aef0;
-      .edit-btn{
-        height: 40px;
-        line-height: 40px;
-        padding: 0 20px;
-        margin-top: 30px;
-        border: solid 1px #38aef0;
-        position: absolute;
-        right: 40px;
+    .edit-btn{
+      height: 40px;
+      line-height: 40px;
+      padding: 0 20px;
+      margin-top: 30px;
+      border: solid 1px #38aef0;
+      position: absolute;
+      right: 40px;
+      .edit{
+        color: #38aef0;
       }
     }
   }
@@ -99,7 +99,6 @@
         background-color: #38aef0;
         color: white;
         cursor: pointer;
-        
       }
     }
   }
