--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -6,8 +6,9 @@
         memder :
         %li.main-header__left-box__member-list__member
           aaaaaaa
-    %a( href='#' id)
-      .edit-btn<Edit
+    .edit-btn
+      = link_to "#" ,class: "edit" do
+        Edit
   .messages
     .message
       .message__upper-info
