--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -18,7 +18,7 @@
   .form
     .new_message
       .input-box
-        %input.input-box__text{:size => 50, :placeholder => "type a message", :type => "text",}/
+        %input.input-box__text{size: 50, placeholder: "type a message", type: "text",}/
         .input-box__image
         %label{class: "input-box__image"}
           = icon('fas', 'image')
