--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,8 @@
 @import "wrapper";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
+@import "modules/user";
 @import "message/message";
 @import "side-bar/group";
+@import "config/colors";
+@import "modules/flash";
