--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,14 +1,15 @@
 .side-bar
   .header-side
     .header-side__box
-      %p.header-side__box__user-name<aaaaa
+      %p.header-side__box__user-name
+        = current_user.name
       %ul.header-side__box__menu
         %li.header-side__box__menu__new-group
         =link_to "#" do
           = icon('far', 'edit')
         %li.header-side__box__menu__edit-user
-        =link_to "#" do
-          = icon('fas', 'cog')
+        = link_to edit_user_path(current_user) do
+          = icon('fas', 'cog', class: 'icon')
   .groups
     .group
       %p.group__group-name<ogino
