--- a/app/assets/stylesheets/modules/_group.scss
+++ b/app/assets/stylesheets/modules/_group.scss
@@ -33,24 +33,23 @@
       }
     }
   }
-  .groups{
-    background-color: #2f3e51;
+  .groups {
+    background-color: $side_blue_light;
     height: calc(100vh - 100px);
-    padding: 20px;
-    color: white;
-    font-size: 15px;
-      .group{
-        margin-bottom: 40px;
-        &__group-name{
-          font-size: 15px;
-          margin-bottom: 5px;
-        }
-        &__latest-message{
-          font-size: 11px;
-        }
+    padding: 0 20px;
+    .group {
+      box-sizing: border-box;
+      padding: 20px 0 40px;
+      &__name {
+        color: $white;
+        font-size: $side_group_name;
       }
-    &__group-name{
-      margin-bottom: 5px;
+      &__message {
+        color: $white;
+        font-size: $side_group_message;
+        margin-top: 5px;
+        text-decoration: none;
+      }
     }
   }
 }
