--- a/app/assets/stylesheets/message/_message.scss
+++ b/app/assets/stylesheets/message/_message.scss
@@ -40,7 +40,6 @@
     background-color: #fafafa;
     height: calc(100vh - 190px);
     padding: 35px 40px;
-    // display: flex;
     overflow: scroll;
     .message{
       padding-bottom: 40px;
@@ -64,41 +63,39 @@
       }
     }
   }
-  .form{
-    padding: 20px 40px;
+  .form {
+    background-color: #DDDDDD;
+    box-sizing: border-box;
     height: 90px;
-    background-color: #dddddd;
-    .new_message{
-      display: flex;
-      .input-box{
-        position: relative;
-        display: flex;
-        height: 50px;
-        width: 100%;
-        .input-box__text{
-          height: 50px;
-          width: 100%;
-          padding: 0 40px 0 10px;
-        }
-        .input-box__image{
-          right: 10px;
-          top: 10px;
-          font-size: 22px;
-          position: absolute;
-        }
-        .input-box__image-text{
-          display: none;
-        }
+    padding: 20px 50px 20px 40px;
+    &__message {
+      border: none;
+      float: left;
+      height: 50px;
+      width: calc(100% - 150px);
+    }
+    &__mask {
+      background-color: $white;
+      float: left;
+      height: 50px;
+      padding-right: 10px;
+      &__image {
+        font-size: 20px;
+        line-height: 50px;
       }
-      .submit-btn{
-        width: 100px;
-        height: 50px;
-        padding: 14px 30px;
-        margin-left: 15px;
-        background-color: #38aef0;
-        color: white;
-        cursor: pointer;
+      .hidden {
+        display: none;
       }
+    }
+    &__submit {
+      background-color: $light_blue;
+      border: none;
+      color: $white;
+      float: right;
+      font-size: 16px;
+      height: 50px;
+      margin-left: 15px;
+      padding: 0 30px;
     }
   }
 }
