--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,8 +4,8 @@
 @import "./font-awesome";
 @import "config/colors";
 @import "config/font-size";
-@import "modules/user";
 @import "message/message";
-@import "modules/group";
+@import "modules/user";
+@import "modules/side-bar";
 @import "modules/group";
 @import "modules/flash";
