--- a/app/assets/stylesheets/modules/_group.scss
+++ b/app/assets/stylesheets/modules/_group.scss
@@ -1,58 +1,107 @@
-* {
-  box-sizing: border-box;
+h1 {
+  letter-spacing: 2px;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
 }
-.fa-edit{
-  color: white;
+h2 {
+  margin-bottom: 10px;
+  color: #f05050;
+  font-size: 14px;
 }
-.fa-cog{
-  color: white;
-}
-.side-bar{
-  background-color: #253141;
-  width: 300px;
-  height: 100vh;
 
-  .header-side{
-    height: 100px;
-    padding: 0 20px;
-    color: white;
-    display: flex;
-    align-items: center;
-    &__box{
-      height: 20px;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      font-weight: bold;
-      
-      &__menu{
-        display: flex;
-        li{
-          margin-left: 5px;
-        }
-      }
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+li {
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+}
+
+
+
+.chat-group-form {
+  width: 980px;
+  margin: 60px auto;
+  padding: 40px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-sizing: border-box;
+  &__errors {
+    margin: 30px 0;
+    padding: 20px 40px;
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    text-align: center;
+  }
+  &__label {
+    display: block;
+    line-height: 50px;
+    font-weight: bold;
+    text-align: right;
+  }
+  &__input {
+    float: left;
+    width: 100%;
+    line-height: 30px;
+    padding: 10px 15px;
+    box-sizing: border-box;
+  }
+  &__action-btn {
+    display: inline-block;
+    padding: 12px 20px;
+    color: #fff;
+    background-color: #38aef0;
+    border: 0;
+  }
+  &__field {
+    margin-top: 30px;
+    &:after {
+      content: "";
+      clear: both;
+      display: block;
+    }
+    &--left {
+      float: left;
+      width: 30%;
+      padding-right: 20px;
+      padding-left: 20px;
+      box-sizing: border-box;
+    }
+    &--right {
+      float: right;
+      width: 70%;
     }
   }
-  .groups {
-    background-color: $side_blue_light;
-    height: calc(100vh - 100px);
-    padding: 0 20px;
-    .group {
-      a{
-        text-decoration: none;
-      }
-      box-sizing: border-box;
-      padding: 20px 0 40px;
-      &__name {
-        color: $white;
-        font-size: $side_group_name;
-      }
-      &__message {
-        color: $white;
-        font-size: $side_group_message;
-        margin-top: 5px;
-        text-decoration: none;
-      }
+}
+
+.chat-group-user {
+  padding: 0 15px;
+  line-height: 50px;
+  font-size: 14px;
+  border-bottom: 1px solid #ddd;
+  &:after {
+    content: "";
+    clear: both;
+    display: block;
+  }
+  &__name {
+    float: left;
+  }
+  &__btn {
+    float: right;
+    display: inline-block;
+    cursor: pointer;
+    &--add {
+      color: #38aef0;
+    }
+    &--remove {
+      color: #f05050;
     }
   }
 }
